--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -2,17 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c:\\\\Users\\\\jl5675\\\\Desktop\\\\Noah\\\\github\\\\patch_analysis\\\\notebooks', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\python312.zip', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\DLLs', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\Lib', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis', '', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\Lib\\\\site-packages', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\jl5675\\\\AppData\\\\Local\\\\miniforge3\\\\envs\\\\analysis\\\\Lib\\\\site-packages\\\\Pythonwin']\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('../utils')) # add my code to the path\n",
+    "\n",
     "import patch_utils as patch\n",
     "import plot_utils as p_plot\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib qt\n",
     "# for pop out plots\n",
     "\n",
-    "folder_path = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2'"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -21,15 +35,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patchdata = patch.make_dataset_dataframe(folder_path)\n",
+    "folder_path = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2'\n",
     "\n",
+    "patchdata = patch.make_dataset_dataframe(folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#NOTE:\n",
     "# df = dataframe.loc['paths', 'rec1_cell1'] # need to access row and column! if I only use loc['row_name'] it will return a series!\n",
     "# note that you can force the return of a dataframe by using double brackets loc[ [row_name] ] (Returns a DataFrame (because pandas treats this as accessing multiple rows, even if it's only one).)\n",
     "\n",
     "rec_name = patchdata.columns[0]\n",
     "date = patchdata.loc['date', rec_name]\n",
-    "title = 'DIV 16; ' + rec_name + '; ' + date\n"
+    "title = 'DIV 16; ' + rec_name + '; ' + date"
    ]
   },
   {
@@ -46,26 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variable      Type         Data/Info\n",
-      "------------------------------------\n",
-      "date          str          2024/08/28\n",
-      "folder_path   str          C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\n",
-      "p_plot        module       <module 'plot_utils' from<...>analysis\\\\plot_utils.py'>\n",
-      "patch         module       <module 'patch_utils' fro<...>nalysis\\\\patch_utils.py'>\n",
-      "patchdata     DataFrame                             <...>     2          3   ...  \n",
-      "plt           module       <module 'matplotlib.pyplo<...>\\\\matplotlib\\\\pyplot.py'>\n",
-      "rec_name      str          rec1_cell1\n",
-      "title         str          DIV 16; rec1_cell1; 2024/08/28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%whos"
    ]
@@ -83,124 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rec1_cell1</th>\n",
-       "      <th>rec2_cell1</th>\n",
-       "      <th>rec3_cell1</th>\n",
-       "      <th>rec4_cell1</th>\n",
-       "      <th>rec4_holding_cell1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <td>2024/08/28</td>\n",
-       "      <td>2024/08/28</td>\n",
-       "      <td>2024/08/28</td>\n",
-       "      <td>2024/08/28</td>\n",
-       "      <td>2024/08/28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>paths</th>\n",
-       "      <td>[C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec1...</td>\n",
-       "      <td>[C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec2...</td>\n",
-       "      <td>[C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec3...</td>\n",
-       "      <td>[C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec4...</td>\n",
-       "      <td>[C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec4...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>metadata</th>\n",
-       "      <td>resolution        ...</td>\n",
-       "      <td>resolution        ...</td>\n",
-       "      <td>resolution        ...</td>\n",
-       "      <td>resolution        ...</td>\n",
-       "      <td>resolution        ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>voltage</th>\n",
-       "      <td>0          1          2          3   ...</td>\n",
-       "      <td>0          1          2          3   ...</td>\n",
-       "      <td>0          1          2          3    ...</td>\n",
-       "      <td>0          1          2          3   ...</td>\n",
-       "      <td>0          1          2          3   ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>current</th>\n",
-       "      <td>0          1          2          3   ...</td>\n",
-       "      <td>0         1         2         3       ...</td>\n",
-       "      <td>0         1         2         3        ...</td>\n",
-       "      <td>0         1         2         3       ...</td>\n",
-       "      <td>0          1          2          3   ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 rec1_cell1  \\\n",
-       "date                                             2024/08/28   \n",
-       "paths     [C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec1...   \n",
-       "metadata                              resolution        ...   \n",
-       "voltage            0          1          2          3   ...   \n",
-       "current            0          1          2          3   ...   \n",
-       "\n",
-       "                                                 rec2_cell1  \\\n",
-       "date                                             2024/08/28   \n",
-       "paths     [C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec2...   \n",
-       "metadata                              resolution        ...   \n",
-       "voltage            0          1          2          3   ...   \n",
-       "current           0         1         2         3       ...   \n",
-       "\n",
-       "                                                 rec3_cell1  \\\n",
-       "date                                             2024/08/28   \n",
-       "paths     [C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec3...   \n",
-       "metadata                              resolution        ...   \n",
-       "voltage           0          1          2          3    ...   \n",
-       "current          0         1         2         3        ...   \n",
-       "\n",
-       "                                                 rec4_cell1  \\\n",
-       "date                                             2024/08/28   \n",
-       "paths     [C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec4...   \n",
-       "metadata                              resolution        ...   \n",
-       "voltage            0          1          2          3   ...   \n",
-       "current           0         1         2         3       ...   \n",
-       "\n",
-       "                                         rec4_holding_cell1  \n",
-       "date                                             2024/08/28  \n",
-       "paths     [C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2\\rec4...  \n",
-       "metadata                              resolution        ...  \n",
-       "voltage            0          1          2          3   ...  \n",
-       "current            0          1          2          3   ...  "
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "patchdata.head()"
    ]
