--- a/notebooks/tere_analysis.ipynb
+++ b/notebooks/tere_analysis.ipynb
@@ -18,37 +18,58 @@
     "# for pop out plots\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n"
+    "%autoreload 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\tere_sept\\9'\n",
     "\n",
-    "patchdata = patch.make_dataset_dataframe(folder)"
+    "patchdata = patch.make_dataset_dataframe(folder)\n",
+    "\n",
+    "recName = patchdata.columns[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100ms11mw_cell1\n",
-      "10ms6mw_cell1\n",
-      "1ms12mw_cell1\n",
-      "300ms9mw2_cell1\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "p_plot.time_plot_stim(patchdata.loc['voltage', recName], patchdata.loc['stimulation', recName], patchdata.loc['metadata', recName], title = recName)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volts = patchdata.loc['voltage', recName].values\n",
+    "stims = patchdata.loc['stimulation', recName]\n",
+    "\n",
+    "cross_list = []\n",
+    "for i in range(len(stims)):\n",
+    "    cross_list.append(p_plot.find_threshold_crosses(stims.loc[i]))\n",
+    "\n",
+    "cross_list[0]\n",
+    "    \n",
+    "\n",
+    "# for i, v in enumerate(volts):\n",
+    "#     plt.plot(v)\n",
+    "#     plt.axvspan(crosses[i][0] - 10000*(i+1), crosses[i][1] - 10000*(i+1), color = 'r', alpha = 0.05, lw = 0)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "recNames = patchdata.columns.tolist()\n",
     "\n",
@@ -58,13 +79,6 @@
     "    \n",
     "    p_plot.multiplot(patchdata.loc['voltage', name], patchdata.loc['metadata', name], title = name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
