added folder handling when reading files

--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,12 @@
     "import os\n",
     "sys.path.append(os.path.abspath('../utils')) # add my code to the path\n",
     "\n",
-    "import patch_utils as patch\n",
-    "import plot_utils as p_plot\n",
-    "import spike_analysis_utils as spikes\n",
+    "from patch_analysis.utils import patch_utils as patch, plot_utils as p_plot, spike_analysis_utils as spikes\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib qt\n",
+    "%matplotlib qt \n",
     "# for pop out plots\n",
+    "# NOTE: This doesn't work on VScode unless you install Pyside6 in the environment you are using as a kernel\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (patch_analysis)",
    "language": "python",
-   "name": "python3"
+   "name": "patch_analysis"
   },
   "language_info": {
    "codemirror_mode": {
