--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -2,14 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('../utils')) # add my code to the path\n",
-    "\n",
     "from patch_analysis.utils import patch_utils as patch, plot_utils as p_plot, spike_analysis_utils as spikes\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,20 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ignored folder:  data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "folder_path = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\patch2'\n",
-    "folder_path_x = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\npatch\\noah\\xxx'\n",
+    "folder_path_x = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\tere_sept\\9'\n",
     "\n",
     "patchdata1 = patch.make_dataset_dataframe(folder_path, stim=False)\n",
     "patchdata2 = patch.make_dataset_dataframe(folder_path_x, stim=False)\n"
@@ -44,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,15 +60,6 @@
     "\n",
     "p_plot.time_plot(patchdata2.loc['voltage', rec_name2], patchdata2.loc['current', rec_name2], patchdata2.loc['metadata', rec_name2], title2)\n",
     "p_plot.multiplot(patchdata2.loc['voltage', rec_name2], patchdata2.loc['metadata', rec_name2], title2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%whos"
    ]
   },
   {
