--- a/notebooks/tere_analysis.ipynb
+++ b/notebooks/tere_analysis.ipynb
@@ -6,16 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('../utils')) # add my code to the path\n",
-    "\n",
-    "import patch_utils as patch\n",
-    "import plot_utils as p_plot\n",
+    "from patch_analysis.utils import patch_utils as patch, plot_utils as p_plot, spike_analysis_utils as spikes\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "#for pop-out, interactive plots\n",
     "%matplotlib qt\n",
-    "# for pop out plots\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n"
@@ -23,20 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder = r'C:\\Users\\jl5675\\Desktop\\Noah\\data\\tere_sept\\9'\n",
     "\n",
-    "patchdata = patch.make_dataset_dataframe(folder)\n",
+    "patchdata = patch.make_dataset_dataframe(folder, stim = True)\n",
     "\n",
     "recName = patchdata.columns[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +51,7 @@
     "for i in range(len(stims)):\n",
     "    cross_list.append(p_plot.find_threshold_crosses(stims.loc[i]))\n",
     "\n",
-    "cross_list[0]\n",
+    "# cross_list[0]\n",
     "    \n",
     "\n",
     "# for i, v in enumerate(volts):\n",
@@ -67,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
